Phase 3: Backend cutover - connect frontend to real Spring Boot backend
- Fixed CORS configuration to allow localhost:5173 and 5174
- Updated authService.ts to use real backend login/logout/changePassword
- Updated emailConfigurationApi.ts to use real backend notification endpoints
- Rewrote API adapter layer (src/api/**) to call real backend instead of mockDb
- Standardized VITE_BASE_URL to http://localhost:8087
- Added CorsConfig.java with configurable allowed origins
- Fixed SecurityConfig, JWT filter, and UserPrincipal for proper auth flow
- Backend: bug fixes in DefectController, ReleaseController, service impls
- All 21 screens verified for behavioral parity with mock mode